MWPW-159951 | Stop scrolling when splash screen is visible (#126)
MWPW-159951 | Stop scrolling when splash screen is visible

Resolves: MWPW-159951

--- a/unitylibs/core/styles/splash-screen.css
+++ b/unitylibs/core/styles/splash-screen.css
@@ -43,6 +43,10 @@ body > .splash-loader {
   width: 100%;
 }
 
+.hide-splash-overflow {
+  overflow: hidden;
+}
+
 .progress-holder .spectrum-ProgressBar {
 	position: relative;
 	display: inline-flex;
